fixed issue with navbar not stretching full width when in certain mobile views

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,16 +321,16 @@ img.bf-brand:hover {
     display: flex;
     -ms-flex-direction: column;
     flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
     background-color: #181a3d!important;
     background-clip: border-box;
     border: 1px solid rgba(0,0,0,.125);
     box-shadow: 0 4px 50px 0 #39fd9bc9, 0 6px 20px 0 rgb(0 0 0 / 19%);
     border-radius: 30px !important;
     margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 80px;
-    width: 400px;
+    max-width: 400px;
 }
 
 div.card-info {
@@ -352,8 +352,6 @@ div.card-info {
     display: flex;
     -ms-flex-direction: column;
     flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
     background-color: #181a3d;
     background-clip: border-box;
     color: white;
@@ -361,7 +359,8 @@ div.card-info {
     box-shadow: 0 4px 50px 0 #39fd9bc9, 0 6px 20px 0 rgb(0 0 0 / 19%);
     border-radius: 30px!important;
     margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 80px;
-    width: 400px;
-    height: 782px;
+    max-width: 400px;
 }
